# Kyty

./: .gitignore  LICENSE  README.md  appveyor.yml
source/: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  KytyGitVersion.h.in  KytyScripts.cpp  cmake_config.h.in  generate_version.cmake  map_to_csv.lua  src_script.cmake  sync.lua  utils.cmake
source/emulator/: CMakeLists.txt
source/emulator/include/Emulator/: Audio.h  Common.h  Config.h  Controller.h  Dialog.h  Elf.h  Emulator.h  Jit.h  Log.h  Network.h  Profiler.h  RuntimeLinker.h  SymbolDatabase.h  Timer.h  VirtualMemory.h
source/emulator/include/Emulator/Graphics/: AsyncJob.h  Color.h  DepthStencilBuffer.h  GpuMemory.h  GraphicContext.h  Graphics.h  GraphicsRender.h  GraphicsRun.h  HardwareContext.h  Image.h  IndexBuffer.h  Label.h  Pm4.h  Shader.h  ShaderParse.h  ShaderSpirv.h  StorageBuffer.h  Texture.h  Tile.h  Utils.h  VertexBuffer.h  VideoOut.h  VideoOutBuffer.h  Window.h
source/emulator/include/Emulator/Kernel/: EventFlag.h  EventQueue.h  FileSystem.h  Memory.h  Pthread.h  Semaphore.h
source/emulator/include/Emulator/Libs/: Errno.h  Libs.h  Printf.h  VaContext.h
source/emulator/include/Emulator/Loader/: Elf.h  Jit.h  Param.h  RuntimeLinker.h  SymbolDatabase.h  SystemContent.h  Timer.h  VirtualMemory.h
source/emulator/lua/: ps4.lua  ps5.lua
source/emulator/src/: Audio.cpp  Config.cpp  Controller.cpp  Dialog.cpp  Elf.cpp  Emulator.cpp  Kyty.cpp  Log.cpp  Network.cpp  Profiler.cpp  RuntimeLinker.cpp  SymbolDatabase.cpp  Timer.cpp  VirtualMemory.cpp
source/emulator/src/Graphics/: Color.cpp  DepthStencilBuffer.cpp  GpuMemory.cpp  Graphics.cpp  GraphicsRender.cpp  GraphicsRun.cpp  Image.cpp  IndexBuffer.cpp  Label.cpp  Pm4.cpp  Shader.cpp  ShaderParse.cpp  ShaderSpirv.cpp  StorageBuffer.cpp  Texture.cpp  Tile.cpp  Utils.cpp  VertexBuffer.cpp  VideoOut.cpp  VideoOutBuffer.cpp  Window.cpp
source/emulator/src/Graphics/Objects/: DepthStencilBuffer.cpp  GpuMemory.cpp  IndexBuffer.cpp  Label.cpp  RenderTexture.cpp  StorageBuffer.cpp  StorageTexture.cpp  Texture.cpp  VertexBuffer.cpp  VideoOutBuffer.cpp
source/emulator/src/Graphics/Tables/: TileTextureInfo_0_56.inc  TileTextureInfo_10_10_0.inc  TileTextureInfo_13_10_0.inc  TileTextureInfo_13_10_9.inc  TileTextureInfo_13_35_0.inc  TileTextureInfo_13_36_0.inc  TileTextureInfo_13_37_0.inc  TileTextureInfo_13_37_9.inc  TileTextureInfo_14_10_0.inc  TileTextureInfo_2_4_7.inc  TileTextureInfo_8_10_0.inc  TileTextureInfo_8_10_9.inc  TileTextureInfo_8_1_0.inc
source/emulator/src/Kernel/: EventFlag.cpp  EventQueue.cpp  FileSystem.cpp  Memory.cpp  Pthread.cpp  Semaphore.cpp
source/emulator/src/Libs/: Errno.cpp  LibAppContent.cpp  LibAudio.cpp  LibC.cpp  LibDbgAsan.cpp  LibDebug.cpp  LibDialog.cpp  LibDiscMap.cpp  LibGraphicsDriver.cpp  LibKernel.cpp  LibNet.cpp  LibPad.cpp  LibPlayGo.cpp  LibSaveData.cpp  LibSysmodule.cpp  LibSystemService.cpp  LibUserService.cpp  LibVideoOut.cpp  Libs.cpp  Printf.cpp
source/emulator/src/Loader/: Elf.cpp  Param.cpp  RuntimeLinker.cpp  SymbolDatabase.cpp  SystemContent.cpp  Timer.cpp  VirtualMemory.cpp
source/include/: kyty_config.h
source/include/Kyty/: UnitTest.h
source/include/Kyty/Core/: ArrayWrapper.h  ByteBuffer.h  Common.h  Compression.h  Core.h  Database.h  DateTime.h  DbgAssert.h  Debug.h  File.h  Hash.h  Hashmap.h  JsonReader.h  Language.h  LinkList.h  MSpace.h  MagicEnum.h  MemoryAlloc.h  RefCounter.h  SDLSubsystem.h  SafeDelete.h  SimpleArray.h  Singleton.h  String.h  String8.h  Subsystems.h  Threads.h  Timer.h  Vector.h  VirtualMemory.h
source/include/Kyty/Math/: Crypto.h  Mat2Impl.h  Mat3Impl.h  Mat4Impl.h  MathAll.h  Rand.h  Vec2Impl.h  Vec3Impl.h  Vec4Impl.h  VectorAndMatrix.h
source/include/Kyty/Scripts/: BuildTools.h  LuaCpp.h  Scripts.h  ScriptsLoader.h
source/include/Kyty/Sys/: SysDbg.h  SysFileIO.h  SysHeap.h  SysLinuxDbg.h  SysLinuxFileIO.h  SysLinuxHeap.h  SysLinuxStdio.h  SysLinuxStdlib.h  SysLinuxSync.h  SysLinuxTimer.h  SysStdio.h  SysStdlib.h  SysSwapByteOrder.h  SysSync.h  SysTimer.h  SysVirtual.h  SysWindowsDbg.h  SysWindowsFileIO.h  SysWindowsHeap.h
source/include/Kyty/Sys/Linux/: SysLinuxDbg.h  SysLinuxFileIO.h  SysLinuxHeap.h  SysLinuxStdio.h  SysLinuxStdlib.h  SysLinuxSync.h  SysLinuxTimer.h  SysLinuxVirtual.h
source/include/Kyty/Sys/Windows/: SysWindowsStdio.h  SysWindowsStdlib.h  SysWindowsSync.h  SysWindowsTimer.h  SysWindowsVirtual.h
source/launcher/: CMakeLists.txt
source/launcher/forms/: configuration_edit_dialog.ui  configuration_list_widget.ui  main_dialog.ui
source/launcher/include/: Common.h  Configuration.h  ConfigurationEditDialog.h  ConfigurationItem.h  ConfigurationListWidget.h  MainDialog.h  MandatoryLineEdit.h  Psf.h
source/launcher/res/: readme-fatcow.txt  res.qrc
source/launcher/src/: Configuration.cpp  ConfigurationEditDialog.cpp  ConfigurationItem.cpp  ConfigurationListWidget.cpp  Main.cpp  MainDialog.cpp  MandatoryLineEdit.cpp
source/launcher/ts/: launcher_ru_RU.ts
source/launcher/utils/: qt5_15.imp
source/lib/: CMakeLists.txt
source/lib/Core/: CMakeLists.txt
source/lib/Core/src/: CharUcd.cpp  Compression.cpp  Core.cpp  Database.cpp  DateTime.cpp  DbgAssert.cpp  Debug.cpp  File.cpp  Hashmap.cpp  JsonReader.cpp  Language.cpp  MSpace.cpp  MemoryAlloc.cpp  SDLSubsystem.cpp  String.cpp  String8.cpp  Subsystems.cpp  Threads.cpp  Timer.cpp  VirtualMemory.cpp
source/lib/Math/: CMakeLists.txt
source/lib/Math/src/: CryptoAES.cpp  CryptoHash.cpp  Math.cpp  Rand.cpp  VectorAndMatrix.cpp
source/lib/Scripts/: CMakeLists.txt
source/lib/Scripts/src/: BuildTools.cpp  Scripts.cpp  ScriptsFileLib.cpp  ScriptsLoader.cpp
source/lib/Sys/: CMakeLists.txt
source/lib/Sys/src/: SysLinuxDbg.cpp  SysLinuxFileIO.cpp  SysLinuxVirtual.cpp  SysWindowsDbg.cpp  SysWindowsFileIO.cpp  SysWindowsVirtual.cpp
source/unit_test/: .clang-tidy  CMakeLists.txt
source/unit_test/src/: UnitTest.cpp
source/unit_test/src/core/: UnitTestCoreDateTime.cpp  UnitTestCoreMSpace.cpp  UnitTestCoreString.cpp  UnitTestCoreString8.cpp
(+24 files in other folders)
